--- a/.github/workflows/build_on_prerelease.yml
+++ b/.github/workflows/build_on_prerelease.yml
@@ -1,17 +1,19 @@
-name: build_on_push
+name: build_on_release
 on: 
   release:
     types: [prereleased]
 
 jobs:
-  build_prerelease:
-    name: Build a prerelease of the blog
+  build:
+    name: Build a pre-release of the blog
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       # Get the repo
       - name: "[Prepare] Checkout repository"
         uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
       # Get java for plantuml
       - name: "[Prepare] Downlaoding java"
         uses: actions/setup-java@v3
