--- a/config/staging/hugo.yaml
+++ b/config/staging/hugo.yaml
@@ -4,3 +4,5 @@ refLinksNotFoundURL: "/404.html"
 
 title: TheStaticTurtle (Staging)
 copyright: Copyright 2023 - TheStaticTurtle (Currently in staging mode)
+
+buildDrafts: true
