Continued work on ultranet-adventures-part-1 (alt-text in galleries

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -41,7 +41,7 @@ markup:
   highlight:
     guessSyntax: false
     lineNos: true
-    lineNumbersInTable: true
+    lineNumbersInTable: false
     noClasses: true
     style: manni
     tabWidth: 4
